# CIMS

./: .gitignore  README.md
backend/: desktop_server.py  manage.py  requirements.txt
backend/cims/: settings.py  urls.py  wsgi.py
backend/warehouse/: admin.py  apps.py  models.py  views.py
backend/warehouse/migrations/: 0001_initial.py  0002_warehouseitem_inventoryrecord_item.py  0003_warehouseitem_unit_price.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: main.jsx  styles.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: lib.rs  main.rs
scripts/: build-backend.ps1
