[package]
name = "cims"
version = "0.1.0"
description = "食堂仓库管理系统"
authors = ["CIMS"]
edition = "2021"

[lib]
name = "cims_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

